2003-03-25  Till Straumann <strauman@slac.stanford.edu>

	PR 349/bsps
	* irq/irq.c, vme/VME.h, vme/vmeconfig.c: Fixes library dependency
	on the vmeUniverse driver. It is now possible to use the ppc/shared/irq
	code on non-VME BSPs without triggering linkage of the vmeUniverse
	driver.

2003-03-18  Till Straumann <strauman@slac.stanford.edu>

	PR 356/bsps
	This patch makes RTEMS/powerpc/shared EABI compliant.
	* irq/irq_init.c, start/Makefile.am, start/start.S, startup/bspstart.c,
	startup/pgtbl_setup.c, vectors/vectors.h, vectors/vectors_init.c:
	zero_bss() should clear not only bss but sbss and sbss2
	also (this is probably a bugfix, as sbss/sbss2 are
	probably used even if -msdata=eabi is not specified).
	* start/rtems_crti.S: New file which must
	be linked immediately after ecrti.o. rtems_crti.o contains
	a code snippet who lets __init() return immediately. Also,
	a new entry point '_init' to the C++ Ctors is generated
	for use by the RTEMS Thread_Handler.

2003-02-20	Till Straumann <strauman@slac.stanford.edu>

	PR 349/bsps
	* console/polled_io.c, console/reboot.c, irq/irq.c, irq/irq_asm.S,
	irq/irq_init.c, openpic/Makefile.am, startup/linkcmds,
	vectors/vectors.S, vectors/vectors_init.c:
	  - install the 'openpic.h' and 'pci.h' headers 
	  - avoid a name clash by renaming 'vsprintf' & friends
	    to 'k_vsprintf' etc.
	  - let 'rtemsReboot' print a stack trace (in case an 'assert' failed)
	  - irq.c:
	     * fix: remove implicit assumption that ISA interrupt vectors start
	            at 0
	     * add BSP hook to let a VME interrupt acknowledge the PCI/openpic
	       IRQ. (SEE ALSO THE ppc-sharedbsp-vme.diff patch)
	  - fix: EABI compliance; isr/exception lowlevel handlers must not
	         clobber R2 or R13
	  - fix: openpic_init was called with the polarity/senses tables
	         swapped (fixed wrong order of arguments)
	  - cosmetics: use new _read_SPRXX() _write_SPRXX() macros

2003-02-20	Till Straumann <strauman@slac.stanford.edu>

	PR 349/bsps